// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Warehouse should should synchronize items with external database 1`] = `
"
DataApi.setMode(200)


Warehouse.incoming('mocked')
  
  Warehouse.modifyItemCount('mocked', 1)
      
    Warehouse.syncSafe({\\"id\\":\\"mocked\\",\\"version\\":2,\\"count\\":4}, null)
          
      DataApi.sync({\\"id\\":\\"mocked\\",\\"version\\":3,\\"count\\":4})
"
`;

exports[`Warehouse should synchronize and redo after remote change 1`] = `
"
DataApi.setMode(409)


Warehouse.incoming('mocked')
  
  Warehouse.modifyItemCount('mocked', 1)
      
    Warehouse.syncSafe({\\"id\\":\\"mocked\\",\\"version\\":2,\\"count\\":4}, null)
          
      DataApi.sync({\\"id\\":\\"mocked\\",\\"version\\":3,\\"count\\":4})
      ~~ errors with
      Remotely changed
              
        DataApi.setMode(200)
          
      Warehouse.updateItemFromRemote('mocked', {\\"status\\":409,\\"version\\":6,\\"count\\":900})
      
    Warehouse.modifyItemCount('mocked', 1)
          
      Warehouse.syncSafe({\\"id\\":\\"mocked\\",\\"version\\":6,\\"count\\":901}, null)
              
        DataApi.sync({\\"id\\":\\"mocked\\",\\"version\\":7,\\"count\\":901})
"
`;

exports[`Warehouse should synchronize remotely removed items 1`] = `
"
DataApi.setMode(404)


Warehouse.incoming('mocked')
  
  Warehouse.modifyItemCount('mocked', 1)
      
    Warehouse.syncSafe({\\"id\\":\\"mocked\\",\\"version\\":2,\\"count\\":4}, null)
          
      DataApi.sync({\\"id\\":\\"mocked\\",\\"version\\":3,\\"count\\":4})
      ~~ errors with
      Not found
          
      Warehouse.removeItem('mocked')
"
`;
